--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TasksDefaulConnectionString": ""
+  },
+  "JWT": {
+    "Key": "",
+    "Issuer": "",
+    "Audience": "",
+    "RefreshTokenValidityInMinutes": ""
   }
 }
