Correções de autenticação e migração

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>21cd5ad4-416f-453b-ab32-d21ed0ef2431</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
