--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrings": {
-    "TasksDefaulConnectionString": ""
-  },
-  "JWT": {
-    "Key": "",
-    "Issuer": "",
-    "Audience": "",
-    "RefreshTokenValidityInMinutes": ""
-  }
+  "AllowedHosts": "*"
 }
