--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "TasksDefaulConnectionString": ""
+    "TasksDefaulConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TasksApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JWT": {
-    "Key": "",
-    "Issuer": "",
-    "Audience": "",
-    "RefreshTokenValidityInMinutes": ""
+    "Key": "TasksApp@2024",
+    "Issuer": "TasksApp",
+    "Audience": "TasksApp",
+    "RefreshTokenValidityInMinutes": "60"
   }
 }
