Inclusão de documentação Swagger

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>21cd5ad4-416f-453b-ab32-d21ed0ef2431</UserSecretsId>
+	 <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
